--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
             <span class="d-block d-lg-none">Mohamad Faez Mohd Fauzi</span>
             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
-                    src="assets/img/profile.jpg" alt="..." /></span>
+                    src="assets/img/profile3.jpg" alt="..." /></span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span
                 class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#profile">Profile</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
@@ -44,8 +44,8 @@
     </nav>
     <!-- Page Content-->
     <div class="container-fluid p-0">
-        <!-- About-->
-        <section class="resume-section" id="about">
+        <!-- profile-->
+        <section class="resume-section" id="profile">
             <div class="resume-section-content">
                 <h1 class="mb-0 text-primary">
                     Mohamad Faez
@@ -55,13 +55,11 @@
                     Kajang, Selangor · +6019 304 9834 ·
                     <a href="mailto:name@email.com">mfmohamadfaez@gmail.com</a>
                 </div>
-                <p class="lead mb-5">I'm a final year student pursuing Bachelor of Information Systems in Intelligent
-                    Systems Engineering, currently looking for
-                    an internship position related to big data
-                    fields or artificial intelligence fields
+                <p class="lead mb-5">I am an independent and self-motivated data science and artificial intelligence graduate with robust problem solving skills and proven leadership capabilities. 
+                    Proficient in a range of data science tools including Python, MS Power BI and MS Excel.
                 </p>
                 <div class="social-icons">
-                    <a class="social-icon" href="http://www.linkedin.com/in/mohamad-faez-mohd-fauzi"><i
+                    <a class="social-icon" href="www.linkedin.com/in/mohamadfaezmf"><i
                             class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="https://github.com/mfmohamadfaez"><i class="fab fa-github"></i></a>
                     <!-- <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
@@ -87,15 +85,15 @@
                             <tr>
                                 <td><i class="fas fa-chevron-right"></i></td>
                                 <td>Courses:</td>
-                                <td>Database Management, Programming for Data Science, Machine Learning, Data Mining, Business Data Analytics</td>
+                                <td>Database Management, Programming for Data Science, Machine Learning, Data Mining, Business Data Analytics, Statistic</td>
                             </tr>
                             <tr>
                                 <td><i class="fas fa-chevron-right"></i></td>
-                                <td colspan="2">[In Progress] CGPA: 3.70</td>
+                                <td colspan="2">[Completed] CGPA: 3.72</td>
                             </tr>
                         </table>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">Sep 2019 - Jan 2022</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">Sep 2019 - Feb 2022</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between">
                     <div class="flex-grow-1">
@@ -103,8 +101,13 @@
                         <div class="subheading mb-3">Diploma in Computer Science</div>
                         <table class="table table-borderless table-sm">
                             <tr>
+                                <td><i class="fas fa-chevron-right"></i></td>
+                                <td>Courses:</td>
+                                <td>Object Oriented Programming, Computer Security, Data Communication and Networking, Information System</td>
+                            </tr>
+                            <tr>
                                 <td class="px-0"><i class="fas fa-chevron-right"></i></td>
-                                <td class="px-0">[Completed] CGPA: 3.50</td>
+                                <td class="px-0" colspan="2">[Completed] CGPA: 3.50</td>
                             </tr>
                         </table>
                     </div>
@@ -117,6 +120,44 @@
         <section class="resume-section" id="experience">
             <div class="resume-section-content">
                 <h2 class="mb-5">Experience</h2>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Data Scientist</h3>
+                        <div class="subheading mb-3">Boustead technology sdn. bhd.</div>
+                        <table class="table table-borderless table-sm">
+                            <tr>
+                                <td><i class="fas fa-chevron-right"></i></td>
+                                <td>Data mining relevant information from the internet using Python.</td>
+                            </tr>
+                            <tr>
+                                <td><i class="fas fa-chevron-right"></i></td>
+                                <td>Develop company database using PostgreSQL.</td>
+                            </tr>
+                            <tr>
+                                <td><i class="fas fa-chevron-right"></i></td>
+                                <td>Supervises MyStep trainee day-to-day tasks.</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">Oct 2021 - Feb 2022</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Data Analyst Intern</h3>
+                        <div class="subheading mb-3">PETRONAS</div>
+                        <table class="table table-borderless table-sm">
+                            <tr>
+                                <td><i class="fas fa-chevron-right"></i></td>
+                                <td>Clean and prep data in Excel to be use in data visualization.</td>
+                            </tr>
+                            <tr>
+                                <td><i class="fas fa-chevron-right"></i></td>
+                                <td>Designs and creates dashboards in Power BI to aid in analyzing and tracking of technology solution deployment value creations.</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">Oct 2021 - Feb 2022</span></div>
+                </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">MyVac Volunteer</h3>
@@ -166,7 +207,7 @@
                         <table class="table table-borderless table-sm">
                             <tr>
                                 <td><i class="fas fa-chevron-right"></i></td>
-                                <td>Assisted Senior Programmer Developed software solutions for clients by using Java programming language.</td>
+                                <td>Develop and implement software solutions based on client requirements using Java.</td>
                             </tr>
                         </table>
                     </div>
@@ -189,22 +230,22 @@
                     <li>
                         <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         Data Mining
-                        <i class="fas fa-star"></i> 
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i>
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         Data Analysis
-                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i>
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         Data Visualization
-                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i>
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         Machine Learning
-                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i>
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
@@ -232,6 +273,11 @@
                         <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         Postgres
                         <i class="fas fa-star"></i><i class="fas fa-star"></i>
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
+                        MongoDB
+                        <i class="fas fa-star"></i>
                     </li>
                 </ul>
                 <br>
@@ -277,7 +323,7 @@
                     <li>
                         <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
                         Microsoft Power BI
-                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i>
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-chevron-right"></i></span>
@@ -348,13 +394,22 @@
             <div class="resume-section-content">
                 <h2 class="mb-5">Awards & Certifications</h2>
                 <ul class="fa-ul mb-0">
-                                        <li class="bold">
+                    <li class="bold">
+                        <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+                        Microsoft Certified Azure Data Scientist Associate <a href="https://www.credly.com/badges/fda07331-f983-4ce8-a103-e271051dde38">[click here]</a>
+                    </li>
+                    <li class="bold">
+                        <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
+                        PETRONAS Focus Recognition of effort in Technology Solution Deployment Program dashboard.
+                    </li>
+                    <li class="bold">
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                         5
                         <sup>th</sup>
                         Place - MAMPU, JPM - Challenge on Innovation and Problem Solving through Technology Advancement
                         (CHIPTA) 2020
                     </li>
+                    
                     <ul class="fa-ul mb-0">
                         <li><span class="fa-li"><i class="fas fa-chevron-right"></i></span> 
                             Won fifth place out of 121 teams in hackathon by working with three colleagues to develop a mobile app
@@ -380,6 +435,35 @@
             <div class="resume-section-content">
                 <h2 class="mb-5">Projects</h2>
                 <ul class="fa-ul mb-0">
+                    <li class="bold">
+                        <span class="fa-li"><i class="fas fa-code text-warning"></i></span>
+                        Technology Performance Feedback Survey Dashboard
+                    </li>
+                    <ul class="fa-ul mb-0">
+                        <li><span class="fa-li"><i class="fas fa-chevron-right"></i></span>
+                            Designed and developed dashboard to analyze technology solution performance, detect area of improvement, and provide mitigation plan for underperformed technology solution.
+                        </li>
+                    </ul>
+                    <br>
+                    <li class="bold">
+                        <span class="fa-li"><i class="fas fa-code text-warning"></i></span>
+                        Technology Solution Deployment Program Dashboard
+                    </li>
+                    <ul class="fa-ul mb-0">
+                        <li><span class="fa-li"><i class="fas fa-chevron-right"></i></span>
+                            Designed and developed dashboard to analyze Technology Solution Deployment Program performance, track value creations, and display working plan.
+                        </li>
+                    </ul>
+                    <br>
+                    <li class="bold">
+                        <span class="fa-li"><i class="fas fa-code text-warning"></i></span>
+                        Eja-Ezi: Bahasa Melayu Spell Checker using Long-Short Term Memory Algorithm                    </li>
+                    <ul class="fa-ul mb-0">
+                        <li><span class="fa-li"><i class="fas fa-chevron-right"></i></span>
+                            Designed and developed a long-short term memory (LSTM) model that can detect and correct Malay words spelling error with 90.08% accuracy.
+                        </li>
+                    </ul>
+                    <br>
                     <li class="bold">
                         <span class="fa-li"><i class="fas fa-code text-warning"></i></span>
                         Mod-Motor Expert System (ModMES)
