--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     Proficient in a range of data science tools including Python, MS Power BI and MS Excel.
                 </p>
                 <div class="social-icons">
-                    <a class="social-icon" href="www.linkedin.com/in/mohamadfaezmf"><i
+                    <a class="social-icon" href="https://www.linkedin.com/in/mohamadfaezmf"><i
                             class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="https://github.com/mfmohamadfaez"><i class="fab fa-github"></i></a>
                     <!-- <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
